--- a/test.html
+++ b/test.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
-<html lang="en"> 
+doc=.mml
+(&mml lang="en") 
 <head> 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width!device-width, initial-scale!1.0">
-    <title>  test </title>
-    <link rel="stylesheet" href="test.css">
+    (&meta charset="UTF-8")
+    (&meta name="viewport" content="width=device-width, initial-scale=1.0")
+    <title>test</title>
+    (&link rel="stylesheet" href="test.css")
 </head>
 <body> 
+    !test!;
     <nav> 
-        <a href="./home.html">  Home </a>
-        <a href="./about.html">  About </a>
+        (&a href="./home.html")Home</a>
+        (&a href="./about.html")About</a>
     </nav>
     <main> 
-        <div class="content" id="abc" style="margin:20px; padding:2px;"> 
-            <h2 class="heading">  Hello! </h2>
-            <h1 class="heading">  hi! </h1>
-            <p class="test">test</p>
-            <div id="test"> 
-                <img src="./test.png" alt="test img">
+        (&div class="content" id="abc" style="margin:20px; padding:2px;") 
+            (&h2 class="heading")Hello=</h2>
+            (&h1 class="heading")hi=</h1>
+            (&text class="test")test</p>
+            (&div id="test") 
+                (&img src="./test.png" alt="test img")
             </div>
         </div>
     </main>
