added many new data types and new varible syntax

--- a/test/test.html
+++ b/test/test.html
@@ -7,13 +7,18 @@
         <link rel="stylesheet" href="test.css">
     </head>
     <body> 
+        <p>red</p>
+        <p>None</p>
+        <p>None</p>
+        <p>None</p>
+        <p>None</p>
         (@filetest)
         <main> 
-            <p>Hello World!</p>
+            <p>:var_name:</p>
             <div class="content" id="abc"> 
                 <h2 class="heading">  Hello!  </h2>
-                <p class="test">  var content: Hello World!  </p>
-                <p>  Result is: testing  </p>
+                <p class="test">  var content: :var_name:  </p>
+                <p>  Result is: :result:  </p>
             </div>
         </main>
     </body>
