--- a/test/test.html
+++ b/test/test.html
@@ -7,12 +7,10 @@
         <link rel="stylesheet" href="test.css">
     </head>
     <body> 
-        <p>red</p>
-        <p>None</p>
-        <p>None</p>
-        <p>None</p>
-        <p>None</p>
-        (@filetest)
+        <div>4</div>
+        <div>5.0</div>
+        <div>5998a443-984d-4531-8488-104d2a9fe58e</div>
+        <p>test</p>
         <main> 
             <p>:var_name:</p>
             <div class="content" id="abc"> 
